<resources>
    <string name="app_name">TrustMe</string>

    <string name="login_heading">Login</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="main_button_login">Login Now</string>
    <string name="button_forgot_password">Don\'t you remember your password?</string>
    <string name="divider_or">Or</string>
    <string name="button_google_login">Sign in with Google</string>
    <string name="button_sigh_up">Don\'t have an account yet? Sign Up</string>
    <string name="heading_sign_up">Create an account</string>
    <string name="user_name_hint">Name</string>
    <string name="user_city_hint">City</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_already_registered">Do you have an account? Login</string>
    <string name="already_have_account">Do you have an account? Login</string>
    <string name="heading_forgot_password">Forgot password?</string>
    <string name="sub_haeding_forgot_password">Give us your email, we\'ll reset that up</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_sign_not_registered">Sign me up instead</string>
    <string name="toast_password_reset_instruction_sent">Password reset instructions sent to your registered email</string>
    <string name="error_email_not_registered">Please check your email. Looks like you\'re not registered with us</string>
    <string name="error_enter_your_name">Enter your name</string>
    <string name="error_enter_your_city">Enter your city</string>
    <string name="error_password_less_than_six_character_long">Password must be at least 6 characters long</string>
    <string name="error_enter_valid_email">Enter a valid email</string>
    <string name="check_internet_connectivity">Check internet connectivity</string>
    <string name="account_created_now_verify_it">Account created successfully. Now go to your mailbox and verify it.</string>
    <string name="toast_problem_creating_account">Problem creating an account</string>

    <string name="toast_authentication_failed">Authentication failed. Please check your email or passowrd</string>
    <string name="create_account_to_save_routes">To enable saving routes with us, please sigh up using Email !</string>
    <string name="toast_login_failed">Login Failed</string>
    <string name="permissionGranted">permissionGranted</string>

    <!--Geofence strings-->
    <string name="add_geofences">Add Geofence</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="not_connected">Not connected</string>

</resources>
