<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.enpassio.trustme.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="112dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/heading_sign_up"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/user_name_hint"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/user_city_and_gender_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/user_city_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:hint="@string/user_city_hint"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gender_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="32dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_shape"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_shape"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/button_sign_up"
            android:textAllCaps="false"
            android:textColor="#1cbeb9" />


        <View

            android:id="@+id/divider_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:background="#cccccc" />

        <Button

            android:id="@+id/button_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

</ScrollView>
